[gd_scene load_steps=22 format=3 uid="uid://cfmbl6ed0fskd"]

[ext_resource type="Script" uid="uid://bcpd1cbky14ky" path="res://DemonPlayer/demon.gd" id="1_fs57w"]
[ext_resource type="Shader" uid="uid://ctrribycrblwy" path="res://Both/Shaders/flash.gdshader" id="2_x675w"]
[ext_resource type="PackedScene" uid="uid://bh6srcfj8h0k0" path="res://DemonPlayer/gun.tscn" id="3_nkav8"]
[ext_resource type="Script" uid="uid://bf7smifukhp5g" path="res://Scripts/camera_2d.gd" id="4_wb88l"]
[ext_resource type="Script" uid="uid://wvyjj1cwm6rh" path="res://StateMachine/state_machine.gd" id="5_o03x4"]
[ext_resource type="Script" uid="uid://bd1q8l2gayb6i" path="res://DemonPlayer/moving_shooting.gd" id="6_4cuj1"]
[ext_resource type="Script" uid="uid://0e1387hali6x" path="res://DemonPlayer/roll.gd" id="7_e703d"]
[ext_resource type="Script" uid="uid://2f30dfmafv3g" path="res://DemonPlayer/idle.gd" id="7_surqq"]
[ext_resource type="Texture2D" uid="uid://cxepbpwnagrhw" path="res://DemonPlayer/SuitDemonShadow.png" id="8_h0ij0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_01r6t"]
shader = ExtResource("2_x675w")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_surqq"]
load_path = "res://.godot/imported/SuitDemon.png-0764165475bab84826d88fbfa79111cc.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_x675w"]
atlas = ExtResource("8_h0ij0")

[sub_resource type="Animation" id="Animation_surqq"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSuitDemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_h0ij0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSuitDemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeadBackground:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Gun:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x675w"]
resource_name = "Run"
length = 0.72
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSuitDemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36, 0.48, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_01r6t"]
resource_name = "Dead"
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSuitDemon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeadBackground:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gun:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x675w"]
_data = {
&"Dead": SubResource("Animation_01r6t"),
&"Idle": SubResource("Animation_surqq"),
&"RESET": SubResource("Animation_h0ij0"),
&"Run": SubResource("Animation_x675w")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x675w"]
radius = 27.2603

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x675w"]
radius = 6.5
height = 17.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0ij0"]
size = Vector2(56, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_c8ava"]
radius = 33.0151

[node name="Demon" type="CharacterBody2D"]
collision_layer = 177
collision_mask = 48
script = ExtResource("1_fs57w")

[node name="DeadBackground" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 6
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1923.0
offset_top = -1080.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SpriteSuitDemon" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 4
material = SubResource("ShaderMaterial_01r6t")
instance_shader_parameters/flash_opacity = 0.0
position = Vector2(-64, -75)
scale = Vector2(4, 4)
texture = SubResource("CompressedTexture2D_surqq")
centered = false
hframes = 8
vframes = 8
frame = 9

[node name="Shadow" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 24)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_x675w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_x675w")
}

[node name="Gun" parent="." instance=ExtResource("3_nkav8")]
unique_name_in_owner = true
z_index = 3
position = Vector2(29, 0)

[node name="GatherArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="GatherBox" type="CollisionShape2D" parent="GatherArea"]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_x675w")
debug_color = Color(1.2514e-06, 0.643333, 0.301925, 0.42)

[node name="GatherDespawn" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GatherDespawn"]
position = Vector2(0, -1)
scale = Vector2(4, 4)
shape = SubResource("CapsuleShape2D_x675w")
debug_color = Color(0.576904, 0.553292, 1.92523e-07, 0.42)

[node name="WalkBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 24.5)
shape = SubResource("RectangleShape2D_h0ij0")
debug_color = Color(0.909583, 0.271589, 0.324396, 0.42)

[node name="HellCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
position_smoothing_speed = 1.0
script = ExtResource("4_wb88l")

[node name="Hitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_c8ava")
debug_color = Color(0, 0.6, 0.701961, 0.215686)

[node name="MouseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -38.0
offset_top = -150.0
offset_right = 2.0
offset_bottom = -127.0

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -20.0
offset_top = -74.0
offset_right = 20.0
offset_bottom = -51.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_o03x4")

[node name="MovingShooting" type="Node" parent="StateMachine"]
script = ExtResource("6_4cuj1")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("7_e703d")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_surqq")

[node name="DashTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.24
one_shot = true
autostart = true

[node name="DashCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
